Use jna for registry read